# fastapi_deposit

./: .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
templates/: entry.html
tests/: test_main.py
